[package]
name = "bevy-shadows"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ChangeCaps/bevy-shadows"
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "e549f143593e90197cb9bc39ab6fed355c8a6681"
default_features = false
features = ["render"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "e549f143593e90197cb9bc39ab6fed355c8a6681"